...
      }
    },
    "5. Use it" : {
      "localizations" : {
        "zh-CN" : {
...

    },
    "Account" : {
      "localizations" : {
        "zh-CN" : {
...

    },
    "All" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "Animated" : {
      "localizations" : {
        "zh-CN" : {
...

    },
    "Cancel" : {
      "localizations" : {
        "zh-CN" : {
...

    },
    "Controllable animation" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "Couldn’t Complete Action" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "Couldn’t load your library" : {

    },
...

    },
    "Create" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "Dance" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Delete this sticker project?" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "Get started" : {
      "localizations" : {
        "zh-CN" : {
...

    },
    "Got it" : {
      "localizations" : {
        "zh-CN" : {
...

    },
    "Idle" : {
      "extractionState" : "stale",
      "localizations" : {
...

    },
    "Learn with tutorials" : {

    },
...
      }
    },
    "Library" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "Marketplace" : {
      "extractionState" : "stale",
      "localizations" : {
...

    },
    "Medium" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "Next" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "No matching stickers" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "No stickers yet" : {
      "localizations" : {
        "zh-CN" : {
...

    },
    "OK" : {
      "localizations" : {
        "zh-CN" : {
...

    },
    "Remove reference" : {
      "localizations" : {
        "zh-CN" : {
...

    },
    "Retry preview" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "Search stickers" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "Static" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "Sticker name" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "Sticker Packs" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "Surprised" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Your packs, in Telegram" : {
      "localizations" : {
        "zh-CN" : {
...
      }
    },
    "Your packs, in WhatsApp" : {
      "localizations" : {
        "zh-CN" : {
...

    },
    "Your pet, on your wrist" : {
      "localizations" : {
        "zh-CN" : {
...
